{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 40,
  "lineage": "064fca19-8fcc-a1b0-7a96-f005ffa33705",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-port",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-05T05:19:15.607-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/triple-virtue-271517/global/firewalls/allow-http-port",
            "name": "allow-http-port",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
            "priority": 1000,
            "project": "triple-virtue-271517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/firewalls/allow-http-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https-port",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-05T05:19:15.609-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/triple-virtue-271517/global/firewalls/allow-https-port",
            "name": "allow-https-port",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
            "priority": 1000,
            "project": "triple-virtue-271517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/firewalls/allow-https-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-port",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-05T05:19:15.604-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/triple-virtue-271517/global/firewalls/allow-ssh-port",
            "name": "allow-ssh-port",
            "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
            "priority": 1000,
            "project": "triple-virtue-271517",
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/firewalls/allow-ssh-port",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200317",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/disks/list-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our virtual machines",
            "enable_display": false,
            "id": "projects/triple-virtue-271517/zones/asia-south1-a/instances/list-1",
            "instance_id": "1821054144105181739",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "cND1_NH_Gj4=",
            "metadata_startup_script": "curl -sSO https://dl.google.com/cloudagents/install-monitoring-agent.sh \u0026\u0026 sudo bash install-monitoring-agent.sh",
            "name": "list-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
                "network_ip": "10.160.0.13",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "triple-virtue-271517"
              }
            ],
            "project": "triple-virtue-271517",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/instances/list-1",
            "service_account": [
              {
                "email": "138592395892-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "asia-south1-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200317",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/disks/list-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our virtual machines",
            "enable_display": false,
            "id": "projects/triple-virtue-271517/zones/asia-south1-a/instances/list-2",
            "instance_id": "1312210956023263786",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "cND1_NH_Gj4=",
            "metadata_startup_script": "curl -sSO https://dl.google.com/cloudagents/install-monitoring-agent.sh \u0026\u0026 sudo bash install-monitoring-agent.sh",
            "name": "list-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
                "network_ip": "10.160.0.14",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "triple-virtue-271517"
              }
            ],
            "project": "triple-virtue-271517",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/instances/list-2",
            "service_account": [
              {
                "email": "138592395892-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "asia-south1-a"
          }
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200317",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/disks/list-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our virtual machines",
            "enable_display": false,
            "id": "projects/triple-virtue-271517/zones/asia-south1-a/instances/list-3",
            "instance_id": "7257918472332800554",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "cND1_NH_Gj4=",
            "metadata_startup_script": "curl -sSO https://dl.google.com/cloudagents/install-monitoring-agent.sh \u0026\u0026 sudo bash install-monitoring-agent.sh",
            "name": "list-3",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
                "network_ip": "10.160.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "triple-virtue-271517"
              }
            ],
            "project": "triple-virtue-271517",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/instances/list-3",
            "service_account": [
              {
                "email": "138592395892-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "asia-south1-a"
          }
        },
        {
          "index_key": 3,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1604-xenial-v20200317",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/disks/list-4"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "This is our virtual machines",
            "enable_display": false,
            "id": "projects/triple-virtue-271517/zones/asia-south1-a/instances/list-4",
            "instance_id": "3400462800238441002",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "foo": "bar",
              "size": "20"
            },
            "metadata_fingerprint": "cND1_NH_Gj4=",
            "metadata_startup_script": "curl -sSO https://dl.google.com/cloudagents/install-monitoring-agent.sh \u0026\u0026 sudo bash install-monitoring-agent.sh",
            "name": "list-4",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/global/networks/default",
                "network_ip": "10.160.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "triple-virtue-271517"
              }
            ],
            "project": "triple-virtue-271517",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/triple-virtue-271517/zones/asia-south1-a/instances/list-4",
            "service_account": [
              {
                "email": "138592395892-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-https"
            ],
            "tags_fingerprint": "0lKznsNvMu8=",
            "zone": "asia-south1-a"
          }
        }
      ]
    }
  ]
}